[package]
name = "evpkdf"
version = "0.2.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
description = "Rust implementation of OpenSSL EVP_bytesToKey function."
repository = "https://github.com/PoiScript/evpkdf"
readme = "README.md"
license = "MIT"
keywords = ["evpkdf", "openssl", "cryptography"]

[dependencies]
digest = "0.10"

[dev-dependencies]
hex-literal = "0.3"
md-5 = "0.10"
sha-1 = "0.10"
